feat(Logger): spdlog supported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,19 @@ set(LINK_LIBRARIES
 # SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 # SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-find_package(Boost REQUIRED)
+if(NOT TARGET spdlog)
+    find_package(spdlog REQUIRED)
+endif()
+if(spdlog_FOUND)
+    add_definitions(-DSPDLOG_ENABLE_SOURCE_LOCATION)
+    include_directories(${spdlog_INCLUDE_DIRS})
+else()
+    message(FATAL_ERROR "spdlog not found")
+endif()
+
+if(NOT TARGET Boost)
+    find_package(Boost REQUIRED)
+endif()
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
 else()
@@ -42,14 +54,18 @@ endif()
 # else()
 #     message(FATAL_ERROR "hiredis not found")
 # endif()
-
-find_package(Protobuf REQUIRED)
+if(NOT TARGET Protobuf)
+    find_package(Protobuf REQUIRED)
+endif()
 if(Protobuf_FOUND)
     include_directories(${Protobuf_INCLUDE_DIRS})
 else()
     message(FATAL_ERROR "Protobuf not found")
 endif()
 
+if(NOT TARGET gRPC)
+    find_package(gRPC REQUIRED)
+endif()
 find_package(gRPC REQUIRED)
 if(gRPC_FOUND)
     include_directories(${gRPC_INCLUDE_DIRS})
