--- a/ChatServer/config.ini
+++ b/ChatServer/config.ini
@@ -1,3 +1,7 @@
+[Logger]
+Path = ./log/ChatServer.log
+Level = debug
+Pattern = [%Y-%m-%d %H:%M:%S.%f][%l][%P][%t][%s:%#] %v
 [GateServer]
 Port = 8080
 [VarifyServer]
