--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -1,3 +1,7 @@
+[Logger]
+Path = ./log/StatusServer.log
+Level = debug
+Pattern = [%Y-%m-%d %H:%M:%S.%f][%l][%P][%t][%s:%#] %v
 [StatusServer]
 Port = 50052
 Host = 0.0.0.0
