perf(ChatServer): multi-thread handle msg

--- a/Server/GateServer/config.ini
+++ b/Server/GateServer/config.ini
@@ -1,6 +1,6 @@
 [Logger]
 Path = ./log/GateServer.log
-Level = debug
+Level = info
 Pattern = [%Y-%m-%d %H:%M:%S.%f][%l][%P][%t][%s:%#] %v
 [GateServer]
 Port = 8080
