--- a/Server/StatusServer/config.ini
+++ b/Server/StatusServer/config.ini
@@ -1,6 +1,6 @@
 [Logger]
 Path = ./log/StatusServer.log
-Level = debug
+Level = info
 Pattern = [%Y-%m-%d %H:%M:%S.%f][%l][%P][%t][%s:%#] %v
 [StatusServer]
 Port = 50052
