docs(all): add sql and architectural diagram

--- a/Server/ChatServer/config.ini
+++ b/Server/ChatServer/config.ini
@@ -11,7 +11,7 @@ Port = 50051
 Host = 127.0.0.1
 Port = 50052
 [SelfServer]
-Name = chatserver1
+Name = chatserverA
 Host = 0.0.0.0
 Port  = 8090
 RPCPort = 50055
@@ -20,14 +20,14 @@ Host = 81.68.86.146
 Port = 3308
 User = root
 Passwd = 123456.
-Schema = llfc
+Schema = AnyoneChat
 [Redis]
 Host = 81.68.86.146
 Port = 6380
 Passwd = 123456
 [PeerServer]
-Servers = chatserver2
-[chatserver2]
-Name = chatserver2
+Servers = chatserverB
+[chatserverB]
+Name = chatserverB
 Host = 127.0.0.1
 Port = 50056
