--- a/Server/ChatServer/config2.ini
+++ b/Server/ChatServer/config2.ini
@@ -11,7 +11,7 @@ Port = 50051
 Host = 127.0.0.1
 Port = 50052
 [SelfServer]
-Name = chatserver2
+Name = chatserverB
 Host = 0.0.0.0
 Port  = 8091
 RPCPort = 50056
@@ -20,14 +20,14 @@ Host = 81.68.86.146
 Port = 3308
 User = root
 Passwd = 123456.
-Schema = llfc
+Schema = AnyoneChat
 [Redis]
 Host = 81.68.86.146
 Port = 6380
 Passwd = 123456
 [PeerServer]
-Servers = chatserver1
-[chatserver1]
-Name = chatserver1
+Servers = chatserverA
+[chatserverA]
+Name = chatserverA
 Host = 127.0.0.1
 Port = 50055
