--- a/Server/GateServer/config.ini
+++ b/Server/GateServer/config.ini
@@ -15,7 +15,7 @@ Host = 81.68.86.146
 Port = 3308
 User = root
 Passwd = 123456.
-Schema = llfc
+Schema = AnyoneChat
 [Redis]
 Host = 81.68.86.146
 Port = 6380
