--- a/Server/StatusServer/config.ini
+++ b/Server/StatusServer/config.ini
@@ -10,18 +10,18 @@ Host = 81.68.86.146
 Port = 3308
 User = root
 Passwd = 123456.
-Schema = llfc
+Schema = AnyoneChat
 [Redis]
 Host = 81.68.86.146
 Port = 6380
 Passwd = 123456
 [chatservers]
-Name = chatserver1,chatserver2
-[chatserver1]
-Name = chatserver1
+Name = chatserverA,chatserverB
+[chatserverA]
+Name = chatserverA
 Host = 127.0.0.1
 Port = 8090
-[chatserver2]
-Name = chatserver2
+[chatserverB]
+Name = chatserverB
 Host = 127.0.0.1
 Port = 8091
